Linked the script to the index file

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
     <link rel="stylesheet" href="game.css">
     <title>Raise A Pet</title>
     <link rel="icon" type="image/x-icon" href="EasterEgg.png">
+    <body>
+        
+    <script src="game.js"></script>
+    </body>
 </html>
