Added a heading and aligned it

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Raise A Pet</title>
     <link rel="icon" type="image/x-icon" href="EasterEgg.png">
     <body>
-        
+        <h1 class="heading">Welcome To Raise-A-Pet!</h1>
     <script src="game.js"></script>
     </body>
 </html>
