Made some changes in html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <link rel="icon" type="image/x-icon" href="EasterEgg.png">
     <body>
         <h1 class="heading">Welcome To Raise-A-Pet!</h1>
+        <div class="stat-bar-container">
+            <div id="stat-bar" class="stat-bar"></div>
+        </div>
+        <button onclick="decreaseStat()">Take Damage</button>
+        <button onclick="increaseStat()">Heal</button>
+
     <script src="game.js"></script>
     </body>
 </html>
