Added basics to the game

--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
-<html>
-    <link rel="stylesheet" href="game.css">
-    <title>Raise A Pet</title>
-    <link rel="icon" type="image/x-icon" href="EasterEgg.png">
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<link rel="stylesheet" href="game.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="icon/x-image" href="EasterEgg.png">
+    <title>Virtual Pet Game</title>
+</head>
+<body>
+    <div class="game-container">
+        <h1>🐾 Virtual Pet Game</h1>
+        <div class="pet-name">Meet your pet: <strong id="petName">Buddy</strong></div>
+        
+        <div class="pet-display">
+            <div class="pet" id="petEmoji">🐶</div>
+        </div>
 
-        <h1 class="heading">Welcome To Raise-A-Pet!</h1>
+        <div class="stats">
+            <div class="stat">
+                <div class="stat-label">🍖 Hunger</div>
+                <div class="stat-bar">
+                    <div class="stat-fill hunger-fill" id="hungerBar"></div>
+                </div>
+                <div id="hungerValue">100</div>
+            </div>
+            <div class="stat">
+                <div class="stat-label">😊 Happiness</div>
+                <div class="stat-bar">
+                    <div class="stat-fill happiness-fill" id="happinessBar"></div>
+                </div>
+                <div id="happinessValue">100</div>
+            </div>
+            <div class="stat">
+                <div class="stat-label">⚡ Energy</div>
+                <div class="stat-bar">
+                    <div class="stat-fill energy-fill" id="energyBar"></div>
+                </div>
+                <div id="energyValue">100</div>
+            </div>
+            <div class="stat">
+                <div class="stat-label">❤️ Health</div>
+                <div class="stat-bar">
+                    <div class="stat-fill health-fill" id="healthBar"></div>
+                </div>
+                <div id="healthValue">100</div>
+            </div>
+        </div>
 
+        <div class="actions">
+            <button class="action-btn" onclick="feedPet()">🍎 Feed</button>
+            <button class="action-btn" onclick="playWithPet()">🎾 Play</button>
+            <button class="action-btn" onclick="petSleep()">😴 Sleep</button>
+            <button class="action-btn" onclick="healPet()">💊 Medicine</button>
+        </div>
+
+        <div class="status-message" id="statusMessage">
+            Take good care of your pet!
+        </div>
+
+        <div class="age-display">
+            Age: <strong id="petAge">0 days</strong>
+        </div>
+    </div>
     <script src="game.js"></script>
-    
-    </body>
+</body>
 </html>
